--- a/Src/CrossStitch.Stitch.Tests/packages.config
+++ b/Src/CrossStitch.Stitch.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Acquaintance" version="1.0.0-rc2" targetFramework="net462" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net462" />
   <package id="FluentAssertions" version="4.14.0" targetFramework="net462" />
   <package id="Moq" version="4.6.38-alpha" targetFramework="net462" />
