Implement basic outline for stitch-to-stitch data messages
Create a StitchGroupName and formalize the idea of 'group name' for stitch instances, so we can look up by application/component/version
Factor some logic from the MasterModule out into helper classes, to start getting towards testability.

--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -65,14 +65,20 @@
     <Compile Include="Messages\Backplane\ClusterMemberEvent.cs" />
     <Compile Include="Messages\Backplane\ZoneMemberEvent.cs" />
     <Compile Include="Messages\Master\StitchDataMessage.cs" />
+    <Compile Include="Messages\StitchDataMessage.cs" />
     <Compile Include="Messages\Stitches\InstanceRequest.cs" />
     <Compile Include="Messages\StitchMonitor\StitchHealthRequest.cs" />
+    <Compile Include="Models\ApplicationComponent.cs" />
+    <Compile Include="Models\ApplicationComponentVersion.cs" />
     <Compile Include="Models\NodeCommunicationInformation.cs" />
+    <Compile Include="Models\StitchVersionName.cs" />
     <Compile Include="ModuleCollection.cs" />
     <Compile Include="Modules\Data\DataCache.cs" />
     <Compile Include="Modules\Data\InMemory\InMemoryDataStorage.cs" />
     <Compile Include="Modules\Logging\LoggingModule.cs" />
     <Compile Include="MessageBus\ModuleLog.cs" />
+    <Compile Include="Modules\Master\DataMessageAddresser.cs" />
+    <Compile Include="Modules\Master\NodeStatusBuilder.cs" />
     <Compile Include="Modules\Master\Zones.cs" />
     <Compile Include="Modules\ModuleNames.cs" />
     <Compile Include="Modules\Stitches\StitchFileSystem.cs" />
