[Master] End-to-end node status send and receive.
NodeStatus is sent to cluster nodes and persisted to the data modules in each node.

--- a/Src/CrossStitch.Backplane.Zyre/CrossStitch.Backplane.Zyre.csproj
+++ b/Src/CrossStitch.Backplane.Zyre/CrossStitch.Backplane.Zyre.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Networking\MessageReceivedEventArgs.cs" />
     <Compile Include="Networking\NetMq\NetMqMessageMapper.cs" />
     <Compile Include="Networking\TargetType.cs" />
+    <Compile Include="PayloadObjectDecoder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ZyreBackplane.cs" />
     <Compile Include="ZyreBackplaneFactory.cs" />
