[Core,Http] Create CoreModule and fix HTTP-related code
Break out core subscriptions into a CoreModule
Fix the HttpTest program to run again
Fix NodeStatus to actually persist to data store
Add IModule.GetStatusDetails to get some info from each module
Add /modules controller to nancy to get module status details
Add a few additional HTTP endpoints for getting node status and other details.

--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Configuration\IModuleConfiguration.cs" />
     <Compile Include="Messages\Backplane\NetworkEvent.cs" />
     <Compile Include="Messages\Backplane\ReceivedEvent.cs" />
+    <Compile Include="Messages\Core\ModuleStatusRequest.cs" />
     <Compile Include="Messages\Data\DataRequestType.cs" />
     <Compile Include="Messages\Data\DataResponse.cs" />
     <Compile Include="Messages\Data\DataResponseType.cs" />
@@ -73,6 +74,7 @@
     <Compile Include="Models\NodeCommunicationInformation.cs" />
     <Compile Include="Models\StitchVersionName.cs" />
     <Compile Include="ModuleCollection.cs" />
+    <Compile Include="Modules\Core\CoreModule.cs" />
     <Compile Include="Modules\Data\DataCache.cs" />
     <Compile Include="Modules\Data\InMemory\InMemoryDataStorage.cs" />
     <Compile Include="Modules\Logging\LoggingModule.cs" />
@@ -125,7 +127,7 @@
     <Compile Include="Monitoring\Events\ObservationEvent.cs" />
     <Compile Include="Messages\CoreEvent.cs" />
     <Compile Include="Models\NodeStatus.cs" />
-    <Compile Include="Messages\CoordinatedRequests\NodeStatusRequest.cs" />
+    <Compile Include="Messages\Master\NodeStatusRequest.cs" />
     <Compile Include="NodeConfiguration.cs" />
     <Compile Include="CrossStitchCore.cs" />
     <Compile Include="Modules\Master\MasterConfiguration.cs" />
