--- a/Src/CrossStitch.Http.Nancy/CrossStitch.Http.NancyFx.csproj
+++ b/Src/CrossStitch.Http.Nancy/CrossStitch.Http.NancyFx.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="Handlers\ApplicationModule.cs" />
     <Compile Include="Handlers\InstanceModule.cs" />
+    <Compile Include="Handlers\ModulesNancyModule.cs" />
     <Compile Include="Handlers\NodeRequestHandler.cs" />
     <Compile Include="HttpConfiguration.cs" />
     <Compile Include="HttpModuleBootstrapper.cs" />
