[Stitches] Improve argument passing for stitches
Pass additional arguments to the stitch process including application, component, version and group name
Allow passing custom arguments to the stitch, after the core arguments, separated by --
Update the pingping and stitchstart test programs to make use of these arguments.

--- a/Src/CrossStitch.Stitch/CrossStitch.Stitch.csproj
+++ b/Src/CrossStitch.Stitch/CrossStitch.Stitch.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Events\EventHandlerExtensions.cs" />
     <Compile Include="Events\PayloadEventArgs.cs" />
     <Compile Include="Utility\JsonUtility.cs" />
+    <Compile Include="V1\Arguments.cs" />
     <Compile Include="V1\Core\CoreMessageManager.cs" />
     <Compile Include="V1\Core\CoreStitchContext.cs" />
     <Compile Include="V1\Core\FromStitchMessageReader.cs" />
