--- a/Src/CrossStitch.Core.Tests/CrossStitch.Core.Tests.csproj
+++ b/Src/CrossStitch.Core.Tests/CrossStitch.Core.Tests.csproj
@@ -74,6 +74,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Models\ApplicationTests.cs" />
+    <Compile Include="Models\StitchGroupNameTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
