--- a/Src/CrossStitch.Core.Tests/CrossStitch.Core.Tests.csproj
+++ b/Src/CrossStitch.Core.Tests/CrossStitch.Core.Tests.csproj
@@ -75,6 +75,7 @@
   <ItemGroup>
     <Compile Include="Models\ApplicationTests.cs" />
     <Compile Include="Models\StitchGroupNameTests.cs" />
+    <Compile Include="Modules\Data\DataServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
