[Stitch,Coordinator] Cleanup InstanceRequest channels
Break out new EnrichedInstanceRequest and CreateInstanceRequest types.
Remove unnecessary channel names.

--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -57,6 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\IModuleConfiguration.cs" />
+    <Compile Include="Messages\Stitches\CreateInstanceRequest.cs" />
+    <Compile Include="Messages\Stitches\EnrichedInstanceRequest.cs" />
     <Compile Include="Modules\RequestCoordinator\CoordinatorService.cs" />
     <Compile Include="Modules\Stitches\StitchesService.cs" />
     <Compile Include="Modules\Stitches\StitchEventObserver.cs" />
