[Http,Stitches] Stub out some new HTTP endpoints
All are empty with TODO notes
Add StitchInstance properties to keep track of the node where they are currently running

--- a/Src/CrossStitch.Http.Nancy/CrossStitch.Http.NancyFx.csproj
+++ b/Src/CrossStitch.Http.Nancy/CrossStitch.Http.NancyFx.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Handlers\InstanceModule.cs" />
     <Compile Include="Handlers\ModulesNancyModule.cs" />
     <Compile Include="Handlers\NodeRequestHandler.cs" />
+    <Compile Include="Handlers\StitchGroupNancyModule.cs" />
     <Compile Include="HttpConfiguration.cs" />
     <Compile Include="HttpModuleBootstrapper.cs" />
     <Compile Include="NancyHttpModule.cs" />
