--- a/Src/CrossStitch.Http.Nancy/CrossStitch.Http.NancyFx.csproj
+++ b/Src/CrossStitch.Http.Nancy/CrossStitch.Http.NancyFx.csproj
@@ -53,7 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Handlers\ApplicationModule.cs" />
-    <Compile Include="Handlers\InstanceModule.cs" />
+    <Compile Include="Handlers\StitchNancyModule.cs" />
     <Compile Include="Handlers\ModulesNancyModule.cs" />
     <Compile Include="Handlers\NodeRequestHandler.cs" />
     <Compile Include="Handlers\StitchGroupNancyModule.cs" />
