--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -57,8 +57,28 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\IModuleConfiguration.cs" />
+    <Compile Include="Messages\Backplane\ClusterMessage.cs" />
+    <Compile Include="Messages\Backplane\ClusterMessageBuilder.cs" />
+    <Compile Include="Messages\Backplane\MessageHeader.cs" />
+    <Compile Include="Messages\Backplane\MessagePayloadType.cs" />
+    <Compile Include="Messages\Backplane\TargetType.cs" />
+    <Compile Include="Messages\Master\CommandReceipt.cs" />
     <Compile Include="Messages\Master\CommandRequest.cs" />
+    <Compile Include="Messages\Master\CommandResponse.cs" />
+    <Compile Include="Messages\Master\CommandResultType.cs" />
+    <Compile Include="Messages\Master\CommandType.cs" />
+    <Compile Include="Modules\Master\IClusterMessageSender.cs" />
     <Compile Include="Messages\Stitches\CreateInstanceRequest.cs" />
+    <Compile Include="Models\CommandJob.cs" />
+    <Compile Include="Modules\Master\FoundStitch.cs" />
+    <Compile Include="Modules\Master\Handlers\ICommandHandler.cs" />
+    <Compile Include="Modules\Master\Handlers\PingCommandHandler.cs" />
+    <Compile Include="Modules\Master\Handlers\RemoveStitchCommandHandler.cs" />
+    <Compile Include="Modules\Master\Handlers\StartStitchCommandHandler.cs" />
+    <Compile Include="Modules\Master\Handlers\StitchCommandHandler.cs" />
+    <Compile Include="Modules\Master\Handlers\StopStitchCommandHandler.cs" />
+    <Compile Include="Modules\Master\MasterDataRepository.cs" />
+    <Compile Include="Modules\Master\StitchLocaleType.cs" />
     <Compile Include="Modules\Stitches\IStitchEventNotifier.cs" />
     <Compile Include="Modules\Master\IStitchRequestHandler.cs" />
     <Compile Include="Modules\Stitches\Adaptors\ProcessV1\ProcessV1Parameters.cs" />
@@ -126,8 +146,6 @@
     <Compile Include="Modules\Master\Events\NodeRemovedFromCluster.cs" />
     <Compile Include="Messages\GenericResponse.cs" />
     <Compile Include="MessageBus\DataHelperClient.cs" />
-    <Compile Include="Messages\CoordinatedRequests\ApplicationMessage.cs" />
-    <Compile Include="Messages\CoordinatedRequests\ComponentChangeRequest.cs" />
     <Compile Include="Modules\StitchMonitor\StitchMonitorModule.cs" />
     <Compile Include="Modules\Timer\MessageTimerModule.cs" />
     <Compile Include="Modules\IModule.cs" />
