--- a/Src/CrossStitch.Http.Nancy/CrossStitch.Http.NancyFx.csproj
+++ b/Src/CrossStitch.Http.Nancy/CrossStitch.Http.NancyFx.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Handlers\CommandJobsNancyModule.cs" />
     <Compile Include="Handlers\StitchNancyModule.cs" />
     <Compile Include="Handlers\ModulesNancyModule.cs" />
     <Compile Include="Handlers\NodeRequestHandler.cs" />
